hphp/hack/test/typecheck/strict_no_statements2.php.exp
File "strict_no_statements2.php", line 3, characters 1-7:
Toplevel statements are not allowed in strict files (Parsing[1002])
