hphp/hack/test/typecheck/strict_no_statements2.php
<?hh // strict

$f = 1;
